Fixed label overlap on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -99,3 +99,9 @@
     transform: rotate(360deg);
   }
 }
+
+@media (max-width: 767px) {
+  .label-float{
+    position: inherit;
+  }
+}
